--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,3 +20,8 @@ body {
 .container_body {
   max-width: 1259px;
 }
+.gravity{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
